# judge-agent

./: .gitignore  ARCHITECTURE.md  pyproject.toml  start.sh  stop.sh
.claude/: launch.json  settings.local.json
artifacts/weblog-reference/: drift-metric-hallucination.jsonl  drift-parse-error-ignored.jsonl  drift-prompt-output-contract.jsonl  drift-validation-skipped.jsonl  (+2 more)
docs/: DEVELOPMENT_GUIDE.md  DRIFT_METRICS.md  DRIFT_METRICS.pptx  DRIFT_METRICS.xlsx  DRIFT_TELEMETRY_INTEGRATION_GUIDE.md  JUDGE_AGENT_CONTEXT_ENGINEERING_REFERENCE.pptx  JUDGE_AGENT_CONTEXT_ENGINEERING_REFERENCE_STYLE_NOTES.md  JUDGE_AGENT_CONTEXT_ENGINEERING_TECH_PRESENTATION.md  JUDGE_AGENT_CONTEXT_ENGINEERING_TECH_PRESENTATION.pptx  JUDGE_AGENT_CONTEXT_ENGINEERING_TECH_PRESENTATION_EDITABLE.pptx  JUDGE_AGENT_CONTEXT_ENGINEERING_TECH_PRESENTATION_EDITABLE_DESIGN.md  JUDGE_AGENT_CONTEXT_ENGINEERING_TECH_PRESENTATION_REFERENCE_STYLE_DRAFT.pptx  context-engineering-guide.md  langchain-langgraph-context-engineering-guide.md
frontend/: API_INTEGRATION_PLAN.md  API_REFERENCE.md  CONVERSATIONAL_AGENT_FRONTEND_PLAN.md  DESIGN.md
full/: AGENT_INTEGRATION_GUIDE.md  PRD.md
judge_agent_reference.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
research/: agent-drift-context-bloat-solutions.md
simple/: .env.example  AGENT_INTEGRATION_GUIDE.md  ARCHITECTURE.md  CONVERSATIONAL_AGENT_DEVELOPMENT_PLAN.md  DEVELOPMENT_GUIDE.md  DEVOPS_CICD_SCENARIOS.md  DRIFT_METRICS.md  PRD.md  REFERENCE_AGENT_IMPLEMENTATION_UPDATE.md  REFERENCE_WEBLOG_AGENT.md  __init__.py
(+192 files in other folders)
