[project]
name = "judge-agent-reference"
version = "0.1.0"
description = "Reference web log analysis agent for Judge Agent drift tests"
requires-python = ">=3.9"

[project.scripts]
weblog-agent = "reference_agent.weblog_agent.cli:main"
judge-agent-simple = "simple.judge_agent_simple.cli:main"

[project.optional-dependencies]
agent = ["langgraph>=0.2", "langchain>=0.3", "langchain-core>=0.3", "langchain-openai>=0.2", "mcp>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]

