[project]
name = "judge-agent-reference"
version = "0.1.0"
description = "Reference web log analysis agent for Judge Agent drift tests"
requires-python = ">=3.9"

[project.scripts]
weblog-agent = "judgeagent.reference.agent.weblog_agent.cli:main"
judge-agent-simple = "judgeagent.backend.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
agent = ["langgraph>=0.2", "langchain>=0.3", "langchain-core>=0.3", "langchain-openai>=0.2", "mcp>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]

